1999-11-08  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Make the test for getpwuid_r work on newer AIX
	versions, too. Still works on Solaris and Linux. Patch from Craig
	Rodrigues <rodrigc@mediaone.net>.

Tue Nov  2 17:21:29 1999  ape@spacetec.no  (Asbjorn Pettersen)

	* glib.h (G_DIR_SEPARATOR): Add defines for EMX/OS2.

Sun Oct 31 18:55:01 1999  ape@spacetec.no  (Asbjorn Pettersen)

	* gcache.c (g_cache_remove): Test if node is NULL.
	If not tested, GIMP's script-fu will crash. 

Sun Oct 17 18:11:40 1999  Tim Janik  <timj@gtk.org>

	* gdataset.c (g_data_set_internal): remove g_dataset_global_lock around
	destroy() notification here as well.

1999-10-15  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gdataset.c (g_datalist_clear_i): Avoid Freezing, when g_datalist
	is called recursivly. Reported by Ola Andersson <rand@ling.umu.se>.

Thu Oct  7 12:28:27 CDT 1999 Shawn T. Amundson <amundson@gtk.org>

	* Released GLib 1.2.6

Sun Oct  3 12:07:44 PDT 1999 Manish Singh <yosh@gimp.org>

	* Makefile.am: list acglib.m4 in CONFIGURE_DEPENDENCIES so we hook
	in to automake's default configure rule instead of making our own

Thu Sep 23 19:47:10 CDT 1999 Shawn T. Amundson <amundson@gtk.org>

	* Released GLib 1.2.5

Fri Sep 17 10:24:45 1999  Tim Janik  <timj@gtk.org>

        * gmem.c (g_mem_chunk_compute_size) (g_mem_chunk_new): applied patch
        from Soeren Sandmann <sandmann@daimi.au.dk>, to force mem chunk's area
        sizes to be a multitiple of atom_size, and to eliminate the MAX_MEM_AREA
        restriction of 65536 bytes. we also catch cases where users pass an area
        size < atom size with a return_if_fail statement now (which is ok,
        because previously this lead to memory corruption anyways).

Thu Sep 16 01:31:43 1999  Tim Janik  <timj@gtk.org>

	* configure.in: version increment to GLib-1.2.5, interface age 5,
	binary age 5.

Thu Aug 26 15:09:36 1999  Tim Janik  <timj@gtk.org>

        * Makefile.am:
        * gmodule/Makefile.am: